Fixed overflow

--- a/DD/wwwroot/Styles/headlineTitles.css
+++ b/DD/wwwroot/Styles/headlineTitles.css
@@ -21,5 +21,6 @@ html {
     }
     .headlineTitle.newsTitle{
         margin-left: 3rem;
+        width: 80%;
     }
 }
